* #3560 Updated spanish translation. (marco)

Snapshot b8ce5083b7

* Handle the passing of the child of the toolitem to the WidgetInvoker in ToolInvoker, FrameWidgetInvoker (erikos) 
* #3293 Fix that several palettes are not hooked up to the same button (erikos)
* #3514 Remove invite when the activiy disappear from the mesh. (cassidy)
* #3003 Make image drags on the clipboard work consistently. (marco)

Snapshot 8ef6c57f8b

* #3478 Fix handling of non-default types. (bertf)

Snapshot 0a666e23cf

* #2977 Associate activity with his journal object if there is one. (marco)
* #3045 Fix clipboard palettes behavior. (marco)
* #2739 Make frame show on corners also after showing palettes. (marco)

Snapshot 47f473189e

* Fix typo so the removal of expanded activity bundles is complete. (tomeu)
* Don't disable the clipboard icons when they are still incomplete. (tomeu)
* #3053: Fix the distance between the clustered xos and the activity. (marco)
* Make the sizes of mesh icons match Eben spec. (marco)
* #3364: When joining an activity, pick up its sharing scope, so we don't
  try to re-share already shared activities in order to invite someone (smcv)

Snapshot 8b784a6223

* #3339 Add default mime types handler to the shell. (marco)
* #3143 Finish up the invite-only mode implementation. (marco)

Snapshot 79237f3114

* #2582 German translation. (fab)
* #2026 Fix the active flag when there are multiple toplevels. (marco)
* Fixed some issues with text objects in the clipboard. (tomeu)

Snapshot a1f5cece18

* Fix traceback on mesh disconnect command (dcbw)

Snapshot 6b6470ebcb

* #1260, #2664, #1542, #2985: Rework network UI bits to be more informative and
    increase granularity of mesh device control (dcbw)
* #2909: Make python activities more tolerant to missing metadata properties. (tomeu)
* #2653: Add audio/wav and audio/x-wav as Audio objects. (tomeu)
* Support moving of data files written to the datastore using standard Activity
  write_file() API (dcbw)
