@@ -1,3 +1,7 @@
+* #3601 Always remove invites from the frame. (cassidy)
+
+Snapshot b8ce5083b7
+
 * #3560 Updated spanish translation. (marco)
 
 Snapshot b8ce5083b7
